Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69489

QComboBox doesn't show italic text as italic

    XMLWordPrintable

Details

    • macOS
    • 6ccbe7ffdfee0a69ba50d22f577075b1d8cb0b04 (qt/qtbase/5.12)

    Description

      QComboBox doesn't show italic text as italic

      Steps to reproduce:

      • run the sample attached
      • open the item list of the combobox
      • observe the items
        EXPECTED: the "Italic item" is written with the italic effect
        ACTUAL: no italic effect

      Attachments

        For Gerrit Dashboard: QTBUG-69489
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            risto.sipola Risto Sipola
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes